# iai

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  env.example  main.py  pyproject.toml
data/20250527_135217_1cf94898/: classified_gov_repositories.csv  gov_repositories_catalog.csv
notebooks/: Analyse of topics.ipynb  Build github database.ipynb  Untitled.ipynb  goal_analysis.ipynb  hello_world.ipynb  prompt_engineering.ipynb  reprocess_missing_readmes.ipynb  test_nb.ipynb
src/iai/: __init__.py  config.py  llm_annalysis.py  llm_utils.py  prompt_repository.py  run_classification.py  run_scan.py  run_summarization.py  scanner.py  utils.py
src/iai/classifiers/: base.py  batch_topic_classifier.py  goal_based_classifier.py  one_at_a_time_classifier.py
src/iai/prompts/: summary_default.txt  summary_short.txt
