[project]
name = "iai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.4.3",
    "pandas>=2.2.3",
    "tensorflow>=2.19.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = ["."]

[tool.setuptools]
package-dir = {"" = "src"}